--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,45 @@
 
+/*==========
+top
+===========*/
+h1 {
+	z-index: 20;
+}
+.top-message {
+	background-image: url(../img/top.png);
+	background-position: bottom ;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+	position: relative;
+}
+.top-message::before {
+	background-color: rgba(0,0,0,0.2);
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	content: ' ';
+}
+
+.top-message p {
+	font-family: "Yu Gothic", YuGo, YuGothic, "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
+	color: #ffffff;
+	font-size: 1.4em;
+	font-weight: 700;
+	line-height: 1.111;/*	transform: matrix(0.999,-0.035,0.035,0.999,0,0);*/
+}
+.top-message h2, .top-message h3 {
+	font-family: "Yu Gothic", YuGo, YuGothic, "游ゴシック", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
+	color: #ffffff;
+	font-size: 3.8em;
+	font-weight: 700;/*	transform: matrix(0.999,-0.035,0.035,0.999,0,0);*/
+}
+.top-message h3 {
+	position: relative;
+}
+.message-textarea {
+	padding-top: 8em;
+	padding-bottom: 8em;
+}
