--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ h1 {
 	z-index: 20;
 }
 .top-message {
-	background-image: url(../img/top.png);
+	background-image: url(img/climate-change.jpg);
 	background-position: bottom ;
 	background-repeat: no-repeat;
 	background-size: cover;
