--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,11 @@
 .aiesec-logo {
-  width: 250px;
-  height: 150px;
+  width height: 15%;
   text-align: left;
 }
 .top-message {
   color: #52565e;
   text-align: center;
   font-size: 12;
+  background-color: #fff;
 }
 
