--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,4 +29,15 @@ li {
   font-size: 12;
   background-color: #fff;
 }
-
+.video{
+  position:relative;
+  width:100%;
+  padding-top:56.25%;
+}
+.video iframe{
+  position:absolute;
+  top:0;
+  right:0;
+  width:100%;
+  height:100%;
+}
